@@ -18,6 +18,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Service
@@ -92,9 +93,13 @@ public class CartServiceImpl implements CartService {
         return carts.stream()
                 .map(cart -> {
                     CartDTO cartDTO = modelmapper.map(cart, CartDTO.class);
+
                     List<ProductDTO> products = cart.getCartItems().stream()
-                            .map(p -> modelmapper.map(p.getProduct(), ProductDTO.class))
-                            .toList();
+                            .map(cartItem -> {
+                                ProductDTO productDTO = modelmapper.map(cartItem.getProduct(), ProductDTO.class);
+                                        productDTO.setQuantity(cartItem.getQuantity());
+                                return productDTO;})
+                            .collect(Collectors.toList());
                     cartDTO.setProducts(products);
                     return cartDTO;
                 }).toList();
